<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="2dp">

    <TextView
        android:id="@+id/addServiceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:paddingLeft="2dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_service_title"
        android:textSize="12pt" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="63dp"
        android:text="@string/add_service_userName" />

    <EditText
        android:id="@+id/add_service_userNameVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="51dp"
        android:enabled="false"
        android:ems="10"/>

    <TextView
        android:id="@+id/emailIdVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="129dp"
        android:text="@string/add_service_userEmailID" />

    <EditText
        android:id="@+id/add_service_userEmailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="111dp"
        android:enabled="false"
        android:ems="10" />

    <TextView
        android:id="@+id/serviceNm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="200dp"
        android:text="@string/add_service_serviceNm" />

    <EditText
        android:id="@+id/add_service_ServiceNm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="285dp"
        android:text="@string/add_service_Comment" />

    <EditText
        android:id="@+id/add_service_commentVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="268dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/addServiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/add_service_submit_Btn" />

</RelativeLayout>