<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_login"><![CDATA[



    app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />







    ]]>

    <EditText
        android:id="@+id/signin.emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="40dp"
        android:ems="12"
        android:hint="@string/activity_login_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signin.password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signin.password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="78dp"
        android:ems="12"
        android:hint="@string/activity_login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin.emailId" />

    <Button
        android:id="@+id/signin.signinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="161dp"
        android:text="@string/activity_login_btn_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin.password" />

    <TextView
        android:id="@+id/signin.signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="107dp"
        android:text="@string/activity_login_txt_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin.signinBtn" />

    <TextView
        android:id="@+id/signin.forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:text="@string/activity_login_txt_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin.signUpTxt" />
</androidx.constraintlayout.widget.ConstraintLayout>