<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Signup"
    tools:showIn="@layout/activity_signup"
    android:weightSum="1"
    android:orientation="vertical"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        >
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signup.profilePic"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/userphoto"
        />

        <ImageView
            android:id="@+id/signup.deleteProfilePic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_dialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup.profilePic">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/signup.firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_first_name_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/signup.lastName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/signup.lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_last_name_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.firstName" />

                <EditText
                    android:id="@+id/signup.phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:maxLength="12"
                    android:hint="@string/activity_signup_phone_hint"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.lastName" />

                <EditText
                    android:id="@+id/signup.address1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_address1_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.firstName" />

                <EditText
                    android:id="@+id/signup.address2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_address2_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.firstName" />

                <EditText
                    android:id="@+id/signup.city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_city_hint"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.firstName" />

                <Spinner
                    android:id="@+id/signup.province"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:paddingStart="0dp"
                    android:ems="6"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/signup.country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="78dp"
                        android:layout_marginTop="10dp"
                        android:ems="6"
                        android:text="@string/activity_signup_country_val"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/signup.firstName" />

                    <EditText
                        android:id="@+id/signup.postalCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:maxLength="7"
                        android:ems="6"
                        android:hint="@string/activity_signup_postalcode_hint"
                        android:inputType="textPersonName"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/signup.emailId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_email_hint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.phone" />

                <EditText
                    android:id="@+id/signup.password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_password_hint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.emailId" />

                <EditText
                    android:id="@+id/signup.confirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="78dp"
                    android:ems="12"
                    android:hint="@string/activity_signup_confirm_password_hint"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.password" />

                <TextView
                    android:id="@+id/passwordRules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="81dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="1dp"
                    android:text="@string/activity_signup_password_rules"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.confirmPassword" />

                <Button
                    android:id="@+id/signup.signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:text="@string/activity_signup_btn_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup.confirmPassword" />

                <TextView
                    android:id="@+id/signup.signInTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/activity_signup_txt_signin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup.signUpBtn" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</LinearLayout>