<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PhoneVerification"
    tools:showIn="@layout/activity_phone_verification">

    <EditText
        android:id="@+id/phoneVerify.phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="200dp"
        android:ems="8"
        android:hint="@string/activity_phone_verify_phone_hint"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneVerify.countryCode"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneVerify.countryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="200dp"
        android:ems="2"
        android:inputType="none"
        android:text="@string/activity_phone_verify_country_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/phoneVerify.resendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="200dp"
        android:text="@string/activity_phone_verify_send_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/phoneVerify.verifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="150dp"
        android:text="@string/activity_phone_verify_verify_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/phoneVerify.editPhone"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="387dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <EditText
        android:id="@+id/phoneVerify.otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="98dp"
        android:ems="8"
        android:hint="@string/activity_phone_verify_otp_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneVerify.phoneNumber" />

    <TextView
        android:id="@+id/phoneVerify.timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/phoneVerify.resendBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>